--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-
-server.port=8082
-
+server.port=8080
+spring.security.user.name=root
+spring.security.user.password=Baxter58!
 spring.datasource.url=jdbc:mysql://localhost:3306/recipes_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Baxter58!
